--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-swipeable-views": "^0.13.9"
+    "react-swipeable-views": "^0.13.9",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
