--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-swipeable-views": "^0.13.9",
+    "semantic-ui-react": "^0.88.2",
     "styled-components": "^5.1.1",
     "uuid": "^8.1.0"
   },
