--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "ace-builds": "^1.4.11",
+    "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-ace": "^9.0.0",
     "react-beautiful-dnd": "^13.0.0",
