--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.1.2",
     "ace-builds": "^1.4.11",
     "axios": "^0.19.2",
+    "brace": "^0.11.1",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
     "node-sass": "^4.14.1",
