--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.55",
-    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "ace-builds": "^1.4.11",
-    "axios": "^0.19.2",
+    "axios": "^0.25.0",
     "brace": "^0.11.1",
+    "buffer": "^6.0.3",
+    "caniuse-lite": "^1.0.30001304",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
-    "node-sass": "^4.14.1",
+    "node-sass": "^7.0.1",
     "path": "^0.12.7",
     "react": "^16.13.1",
     "react-ace": "^9.2.1",
@@ -23,7 +25,7 @@
     "react-html-parser": "^2.0.2",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^5.0.0",
     "react-swipeable-views": "^0.13.9",
     "semantic-ui-react": "^0.88.2",
     "styled-components": "^5.1.1",
